src/DesireeIA.LocaleEngine/include/desireeia/abi.h

typedef struct desireeia_hw_info {
    int32_t cpu_threads;
    int32_t cpu_has_avx;
    int32_t cpu_has_avx2;
    int32_t cpu_has_avx512;
    int32_t cpu_has_neon;
    int32_t cuda_device_count;
    int32_t cuda_total_mb;
    uint64_t ram_total_mb;
    uint64_t ram_free_mb;
    int32_t has_metal;
    int32_t has_vulkan;
    int32_t intel_gpu_count;
    int32_t axelera_device_count;
} desireeia_hw_info;
typedef struct desireeia_plan {
    desireeia_backend backend;
    desireeia_format format;
    desireeia_quant dense_quant;
    desireeia_quant expert_quant;
    int32_t n_threads;
    uint64_t ram_budget_mb;
    int32_t expert_cache_count;
    int32_t expert_prefetch_enabled;
    int32_t kv_compression_enabled;
    int32_t expert_pin_enabled;
    int32_t expert_prefetch_depth;
    int32_t batch_union_enabled;
    int32_t dual_ssd_enabled;
    int32_t ssd_tier_mode;
    uint64_t ssd_tier_cache_mb;
} desireeia_plan;
typedef enum desireeia_error {
    DESIREEIA_OK                = 0,
    DESIREEIA_ERR_INVALID_ARG   = -1,
    DESIREEIA_ERR_NOT_SUPPORTED = -2,
    DESIREEIA_ERR_IO            = -3,
    DESIREEIA_ERR_PARSE         = -4,
    DESIREEIA_ERR_NO_MEM        = -5,
    DESIREEIA_ERR_UNDEFINED     = -6
} desireeia_error;
typedef struct desireeia_ctx desireeia_ctx;
typedef void (*desireeia_log_cb)(int32_t level, const char* msg, void* user);
DESIREEIA_API const char* desireeia_version(void);
DESIREEIA_API desireeia_error desireeia_set_logger(desireeia_log_cb cb, void* user);
DESIREEIA_API desireeia_error desireeia_probe_hw(desireeia_hw_info* out);
DESIREEIA_API desireeia_error desireeia_make_plan(const desireeia_hw_info* hw,
                                         const char* model_path,
                                         const desireeia_plan* override,
                                         desireeia_plan* out);
DESIREEIA_API desireeia_error desireeia_create(const char* model_path,
                                      const desireeia_plan* plan,
                                      desireeia_log_cb cb,
                                      void* user,
                                      desireeia_ctx** out);
DESIREEIA_API desireeia_error desireeia_destroy(desireeia_ctx* ctx);
DESIREEIA_API desireeia_error desireeia_predict(desireeia_ctx* ctx,
                                       const int32_t* tokens,
                                       size_t n_tokens,
                                       int32_t* out_token);
DESIREEIA_API desireeia_error desireeia_next_token(desireeia_ctx* ctx, int32_t* out_token);
DESIREEIA_API size_t desireeia_context_size(const desireeia_ctx* ctx);
DESIREEIA_API desireeia_error desireeia_tokenize(desireeia_ctx* ctx,
                                        const char* text,
                                        int32_t add_bos,
                                        int32_t* out_ids,
                                        size_t max_ids,
                                        size_t* out_count);
DESIREEIA_API desireeia_error desireeia_token_piece(desireeia_ctx* ctx,
                                           int32_t id,
                                           char* out_buf,
                                           size_t buf_size);
typedef enum desireeia_special_token {
    DESIREEIA_TOKEN_BOS = 0,
    DESIREEIA_TOKEN_EOS = 1,
    DESIREEIA_TOKEN_UNK = 2,
    DESIREEIA_TOKEN_PAD = 3
} desireeia_special_token;
DESIREEIA_API desireeia_error desireeia_special_token_id(const desireeia_ctx* ctx,
                                                desireeia_special_token which,
                                                int32_t* out_id);
DESIREEIA_API desireeia_error desireeia_is_eog_token(const desireeia_ctx* ctx,
                                            int32_t id,
                                            int32_t* out_is_eog);
DESIREEIA_API desireeia_error desireeia_embed(desireeia_ctx* ctx,
                                     const int32_t* tokens,
                                     size_t n_tokens,
                                     float* out_embd,
                                     size_t out_capacity,
                                     size_t* out_len,
                                     uint32_t* out_embd_dim);
typedef struct desireeia_sampling {
    float    temperature;
    int32_t  top_k;
    float    top_p;
    float    penalty_repeat;
    float    penalty_freq;
    float    penalty_present;
    int32_t  penalty_last_n;
    uint32_t seed;
} desireeia_sampling;
DESIREEIA_API desireeia_error desireeia_set_sampling(desireeia_ctx* ctx,
                                            const desireeia_sampling* params);
DESIREEIA_API desireeia_error desireeia_get_sampling(const desireeia_ctx* ctx,
                                            desireeia_sampling* out);
DESIREEIA_API desireeia_error desireeia_load_lora_adapter(desireeia_ctx* ctx,
                                                  const char* lora_gguf_path,
                                                  float scale);
DESIREEIA_API desireeia_error desireeia_clear_lora_adapters(desireeia_ctx* ctx);
DESIREEIA_API desireeia_error desireeia_load_prerouter(desireeia_ctx* ctx, const char* path);
DESIREEIA_API desireeia_error desireeia_clear_prerouter(desireeia_ctx* ctx);
DESIREEIA_API desireeia_error desireeia_set_prerouter_heuristic(desireeia_ctx* ctx, int32_t enabled);
DESIREEIA_API desireeia_error desireeia_apply_chat_template(const desireeia_ctx* ctx,
                                                    const char** roles,
                                                    const char** contents,
                                                    size_t n_messages,
                                                    int add_assistant,
                                                    char* out_buf,
                                                    size_t buf_size,
                                                    size_t* out_len);
DESIREEIA_API void desireeia_profile_dump(char* out_buf, size_t buf_size);
DESIREEIA_API void desireeia_profile_reset(void);
typedef struct DesireeAIImage {
    uint32_t width;
    uint32_t height;
    uint32_t channels;  
    uint8_t* data;
} DesireeAIImage;
typedef struct DesireeAIVisionConfig {
    int32_t embedding_dim;      
    int32_t patch_size;         
    int32_t image_size;         
    int32_t num_heads;          
    int32_t num_layers;         
    int32_t projection_dim;     
    int32_t has_encoder;        
} DesireeAIVisionConfig;
typedef struct DesireeAIVisionCtx DesireeAIVisionCtx;
DESIREEIA_API desireeia_error desireeia_load_image(const char* path,
                                                   int32_t expected_channels,
                                                   DesireeAIImage* out);
DESIREEIA_API void desireeia_free_image(DesireeAIImage* img);
DESIREEIA_API DesireeAIVisionCtx* desireeia_vision_create(const char* model_path,
                                                          desireeia_log_cb cb,
                                                          void* user);
DESIREEIA_API void desireeia_vision_destroy(DesireeAIVisionCtx* ctx);
DESIREEIA_API desireeia_error desireeia_vision_get_config(const DesireeAIVisionCtx* ctx,
                                                          DesireeAIVisionConfig* out);
DESIREEIA_API desireeia_error desireeia_vision_encode(DesireeAIVisionCtx* ctx,
                                                      const DesireeAIImage* image,
                                                      float* out_embd,
                                                      size_t out_capacity,
                                                      size_t* out_len,
                                                      uint32_t* out_dim);
DESIREEIA_API desireeia_error desireeia_vision_preprocess(const DesireeAIImage* input,
                                                          int32_t target_size,
                                                          float* out_pixels,
                                                          size_t out_capacity,
                                                          size_t* out_len);
DESIREEIA_API desireeia_error desireeia_has_vision(desireeia_ctx* ctx,
                                                   int32_t* out_has);
DESIREEIA_API desireeia_error desireeia_vision_token_count(desireeia_ctx* ctx,
                                                           int32_t* out_count);
DESIREEIA_API desireeia_error desireeia_vision_image_token(desireeia_ctx* ctx,
                                                           int32_t* out_id);
DESIREEIA_API desireeia_error desireeia_vision_encode_ctx(desireeia_ctx* ctx,
                                                          const DesireeAIImage* image,
                                                          float* out_embd,
                                                          size_t out_capacity,
                                                          size_t* out_len,
                                                          uint32_t* out_dim);
DESIREEIA_API desireeia_error desireeia_predict_image(desireeia_ctx* ctx,
                                                      const int32_t* tokens,
                                                      size_t n_tokens,
                                                      const float* embd,
                                                      size_t n_embd,
                                                      int32_t image_token,
                                                      int32_t* out_token);